# human_3d_detector

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
human_3d_detector/: human_detector_node.py
