
<?xml version="1.0"?>
<package format="3">
  <name>human_3d_detector</name>
  <version>0.1.0</version>
  <description>Human detection with YOLO and depth image</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
</package>
